@@ -20,6 +20,7 @@ Import-Package: org.eclipse.cdt.core,
  org.eclipse.core.filesystem,
  org.eclipse.core.resources,
  org.eclipse.debug.core.model,
+ org.eclipse.debug.core.sourcelookup.containers,
  org.eclipse.debug.ui,
  org.eclipse.debug.ui.sourcelookup,
  org.eclipse.jface.text,
