@@ -1,3 +1,10 @@
+2010-05-28  Elliott Baron  <ebaron@fedoraproject.org>
+
+	Bug #314680
+	* META-INF/MANIFEST.MF: Added new dependency.
+	* src/org/eclipse/linuxtools/profiling/ui/ProfileUIUtils.java (openEditorAndSelect): Account
+		for source lookup returning LocalFileStorage.
+
 2010-05-06  Roland Grunberg  <rgrunber@redhat.com>
 
 	* src/org/eclipse/linuxtools/profiling/ui/ProfileUIUtils.java (findFunctionsInProject):
